<?xml version="1.0" encoding="utf-8"?>
<!-- Developed by: Michael A. F. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/equake_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_primary">

    <ImageView
        android:id="@+id/ef_exit"
        style="@style/EQuakeIcons"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/exit_content_desc"
        android:elevation="10dp"
        android:src="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/ef_top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/back_equake_view"
        android:gravity="center"
        android:text="@string/placeholder_location"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ef_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ef_top"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/placeholder_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ef_magnitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ef_time"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/placeholder_magnitude"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ef_depth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ef_magnitude"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/placeholder_depth"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ef_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ef_map"
        android:layout_marginBottom="5dp"
        android:text="@string/placeholder_coordinates"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/ef_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/placeholder_link"
        android:textAlignment="center"
        android:textStyle="bold" />

    <fragment
        android:id="@+id/ef_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_above="@+id/ef_link"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        tools:ignore="FragmentTagUsage" />
</RelativeLayout>