<?xml version="1.0" encoding="utf-8"?>
<!-- Developed by: Michael A. F. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@drawable/back_search_date">

    <ImageView
        android:id="@+id/sdr_icon"
        style="@style/EQuakeIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search_content_desc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp"
        android:layout_toStartOf="@+id/sdr_icon"
        android:layout_toEndOf="@+id/sdr_label"
        android:background="@color/color_background_tertiary">

        <TextView
            android:id="@+id/sdr_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/placeholder_date_hint"
            android:background="@color/color_background_primary"
            android:gravity="center">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/sdr_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/search_date_label" />
</RelativeLayout>