<?xml version="1.0" encoding="utf-8"?>
<!-- Developed by: Michael A. F. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_secondary">

    <ImageView
        android:id="@+id/ff_back"
        style="@style/EQuakeIcons"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/filter_back_button_content_desc"
        android:elevation="10dp"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:id="@+id/ff_btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/back_search_date"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="3dp">

        <ImageView
            android:id="@+id/ff_sort_direction"
            style="@style/EQuakeIcons"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_sort_direction"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ff_sort_magnitude"
            style="@style/EQuakeIcons"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_sort_magnitude"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ff_sort_depth"
            style="@style/EQuakeIcons"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_sort_depth"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ff_sort_clear"
            style="@style/EQuakeIcons"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_clear"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/ff_label_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ff_btn_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/color_background_secondary"
        android:elevation="10dp"
        android:padding="2dp"
        android:text="@string/directions_filter_label"
        android:textColor="@color/color_text_dark_secondary"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ff_label_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/color_background_secondary"
        android:elevation="10dp"
        android:padding="2dp"
        android:text="@string/label_empty"
        android:textColor="@color/color_text_dark_secondary"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ff_top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color_primary"
        android:gravity="center"
        android:paddingHorizontal="35dp"
        android:text="@string/placeholder_date"
        android:textColor="@color/color_text_white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ff_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ff_top"
        tools:listitem="@layout/main_list_item" />

</RelativeLayout>